external-crates/move/crates/move-compiler/tests/move_2024/typing/loop_break_invalid_1.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04007]: incompatible types
  ┌─ tests/move_2024/typing/loop_break_invalid_1.move:4:12
  │
4 │     let x: u64 = loop {
  │            ^^^
  │            │
  │            Invalid type annotation
  │            Expected: 'u64'
5 │         break 0u8
  │               --- Given: 'u8'
